Fix text spacing in safari

--- a/source/assets/stylesheets/components/_project_preview.scss
+++ b/source/assets/stylesheets/components/_project_preview.scss
@@ -79,7 +79,7 @@
       &:first-of-type {
         margin-top: 35px;
         font-size: 0.8em;
-        line-height: 1.75em;
+        line-height: 1.55em;
       }
 
       &:last-of-type {
